--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -23,7 +23,7 @@
   }
 
   .title {
-    font-family: 'FFMarkWebProBook';
+    font-family: 'TTNorms-Regular';
     font-size: 1.3em;
     font-weight: 600;
     color: #326671;
@@ -107,7 +107,7 @@
   .author {
     a {
       color: #105a6d;
-      font-family: 'FFMarkWebProMedium';
+      font-family: 'TTNorms-Medium';
 
       &:hover {
         text-decoration: none;
