--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -104,7 +104,7 @@
 			width: fit-content;
 			flex-grow: 1;
 			text-align: center;
-			font-family: 'FFMarkWebProBook';
+			font-family: 'TTNorms-Regular';
 			transition: all 0.2s ease-out;
 			font-size: 0.85em;
 			background: rgba(146, 209, 239, 0.1);
@@ -143,7 +143,7 @@
 			padding: 12px 0;
 			font-size: 18px;
 			font-weight: 200;
-			font-family: 'FFMarkWebProMedium', serif;
+			font-family: 'TTNorms-Medium', serif;
 			transition: all 0.2s ease;
 			border-bottom: 1px dashed rgba(255, 255, 255, 0.1) !important;
 			line-height: 1;
@@ -176,14 +176,14 @@
 
 			.single-author-name {
 				font-size: 0.9em !important;
-				font-family: 'FFMarkWebProMedium', sans-serif !important;
+				font-family: 'TTNorms-Medium', sans-serif !important;
 				color: #fff;
 			}
 
 			.role {
 				color: hsla(0, 0%, 100%, 0.7);
 				display: block;
-				font-family: 'FFMarkWebProBook';
+				font-family: 'TTNorms-Regular';
 				font-size: 0.8em;
 				line-height: 1.2;
 				margin-top: 6px;
@@ -215,7 +215,7 @@
 		margin: 15px 0;
 		text-transform: none;
 		font-size: 1em;
-		font-family: 'FFMarkWebProBook',sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-size: 0.9em;
 		line-height: 1.6;
 		@media(max-width: 600px) {
