--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'FFMarkWebProBook', sans-serif;
+	font-family: 'TTNorms-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -32,7 +32,7 @@ article {
 		line-height: 1.7em;
 		font-size: 16px;
 		font-display: block;
-		font-family: 'FFMarkWebProBook';
+		font-family: 'TTNorms-Regular';
 	}
 }
 
@@ -42,12 +42,12 @@ section {
 }
 
 strong {
-	font-family: 'FFMarkWebProMedium';
+	font-family: 'TTNorms-Medium';
 	font-weight: 500;
 }
 
 a {
-	font-family: 'FFMarkWebProBook';
+	font-family: 'TTNorms-Regular';
 
 	&:hover {
 		cursor: pointer;
@@ -63,7 +63,7 @@ a {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'ProductSans-Bold', 'FFMarkWebProMedium', 'FFMarkWebProMedium', sans-serif;
+	font-family: 'ProductSans-Bold', 'TTNorms-Medium', 'TTNorms-Medium', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -75,14 +75,14 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'FFMarkWebProMedium', 'FFMarkWebProMedium', serif;
+	font-family: 'TTNorms-Medium', 'TTNorms-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
 }
 
 h3 {
-	font-family: 'FFMarkWebProMedium', serif;
+	font-family: 'TTNorms-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
@@ -91,7 +91,7 @@ h3 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'FFMarkWebProMedium', 'FFMarkWebProMedium';
+	font-family: 'TTNorms-Medium', 'TTNorms-Medium';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -111,7 +111,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'FFMarkWebProMedium', serif;
+	font-family: 'TTNorms-Medium', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
