--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -43,7 +43,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'FFMarkWebProBook',sans-serif !important;
+			font-family: 'TTNorms-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -57,7 +57,7 @@
 			}
 
 			a {
-				font-family: 'FFMarkWebProMedium',sans-serif !important;
+				font-family: 'TTNorms-Medium',sans-serif !important;
 			}
 
 			* {
@@ -119,7 +119,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'FFMarkWebProMedium';
+			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 			@media(max-width: 600px) {
 				font-size: 1.65em;
 				margin: 0 0 10px;
@@ -136,7 +136,7 @@
 					color: @secondary-color;
 				}
 				@media(max-width: 600px) {
-					font-family: 'ProductSans-Bold', 'FFMarkWebProMedium';
+					font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 					font-weight: 500;
 				}
 			}
@@ -149,7 +149,7 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'FFMarkWebProMedium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			@media(max-width: 600px) {
 				font-size: 1em !important;
 				-webkit-line-clamp: 2;
@@ -197,7 +197,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'FFMarkWebProMedium', sans-serif;
+		font-family: 'TTNorms-Medium', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -211,7 +211,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'FFMarkWebProMedium','FFMarkWebProMedium', 'sans-serif';
+			font-family: 'TTNorms-Medium','TTNorms-Medium', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -236,7 +236,7 @@
 				}
 
 				.mobile-date {
-					font-family: 'FFMarkWebProMedium';
+					font-family: 'TTNorms-Medium';
 					font-size: .9em;
 				}
 			}
@@ -245,7 +245,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'FFMarkWebProMedium';
+				font-family: 'TTNorms-Medium';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -255,7 +255,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'FFMarkWebProMedium','FFMarkWebProMedium';
+			font-family: 'TTNorms-Medium','TTNorms-Medium';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -281,7 +281,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 13px;
-					font-family: 'FFMarkWebProMedium','FFMarkWebProMedium';
+					font-family: 'TTNorms-Medium','TTNorms-Medium';
 				}
 
 				i {
@@ -319,7 +319,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'FFMarkWebProMedium', sans-serif;
+					font-family: 'TTNorms-Medium', sans-serif;
 					color: #4e6473;
 					line-height: 1;
 					overflow: hidden;
@@ -344,7 +344,7 @@
 
 			&.date {
 				span {
-					font-family: 'FFMarkWebProMedium', sans-serif;
+					font-family: 'TTNorms-Medium', sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -431,7 +431,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: 'FFMarkWebProMedium',serif;
+			font-family: 'TTNorms-Medium',serif;
 		}
 	}
 }
