--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -41,16 +41,16 @@
 	}
 
 	.post-excerpt {
-		font-family: 'FFMarkWebProMedium';
+		font-family: 'TTNorms-Medium';
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'FFMarkWebProMedium',serif;
+		font-family: 'TTNorms-Medium',serif;
 	}
 
 	.meta-info {
-		font-family: 'FFMarkWebProBook',sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
