--- a/src/less/pages/githubcard.less
+++ b/src/less/pages/githubcard.less
@@ -53,7 +53,7 @@
 
     li {
       display: inline-block;
-      font-family: 'FFMarkWebProMedium', '';
+      font-family: 'TTNorms-Medium', '';
       color: #444;
       font-size: 1.1em;
       border: 0;
@@ -149,7 +149,7 @@
       padding: 15px 0 0;
       height: fit-content;
       text-transform: uppercase;
-      font-family: 'FFMarkWebProMedium', sans-serif;
+      font-family: 'TTNorms-Medium', sans-serif;
     }
 
     a {
@@ -186,7 +186,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: FFMarkWebProMedium;
+      font-family: TTNorms-Medium;
       font-size: 1em;
     }
 
@@ -240,7 +240,7 @@
     /* font-weight: bold; */
     color: #222;
     text-transform: uppercase;
-    font-family: 'FFMarkWebProMedium', sans-serif;
+    font-family: 'TTNorms-Medium', sans-serif;
   }
 
   .error {
