--- a/src/less/pages/repos.less
+++ b/src/less/pages/repos.less
@@ -13,7 +13,7 @@
 }
 
 .repo-title {
-  font-family: 'FFMarkWebProMedium',serif;
+  font-family: 'TTNorms-Medium',serif;
   font-size: 18px !important;
 
   &:hover {
