--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     background: white;
-    padding: 20px;
   }
 
   .descending {
@@ -88,11 +87,11 @@
       }
 
       .sort-title {
-        font-family: 'FFMarkWebProMedium';
+        font-family: 'TTNorms-Medium';
       }
 
       .sort-method {
-        font-family: 'FFMarkWebProMedium';
+        font-family: 'TTNorms-Medium';
       }
     }
   }
@@ -101,13 +100,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 20px;
     border-bottom: solid 1px #dadada;
     transition: all .2s ease-out;
 
     &:last-child {
         border-bottom: none;
-        padding: 20px 0 0;
     }
 
     .featured-media {
@@ -193,7 +191,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','FFMarkWebProMedium',serif;
+          font-family: 'ProductSans-Regular','TTNorms-Medium',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -206,7 +204,7 @@
         }
 
         .postcount {
-          font-family: 'FFMarkWebProMedium',serif;
+          font-family: 'TTNorms-Medium',serif;
           font-size: 1.3em;
         }
       }
@@ -218,7 +216,7 @@
         }
 
         .meta-item span {
-          font-family: 'FFMarkWebProMedium';
+          font-family: 'TTNorms-Medium';
         }
 
         .tags {
