--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -102,7 +102,7 @@ blockquote pre {
       margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
-      font-family: 'FFMarkWebProMedium';
+      font-family: 'TTNorms-Medium';
       font-size: 1.15em;
       font-style: normal;
       font-variant: normal;
@@ -584,7 +584,7 @@ blockquote pre {
       margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
-      font-family: FFMarkWebProMedium;
+      font-family: TTNorms-Medium;
       font-size: 1.3em;
       font-style: normal;
       font-variant: normal;
