--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -33,7 +33,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'FFMarkWebProMedium';
+			font-family: 'TTNorms-Medium';
 		}
 
 		p > a {
@@ -114,7 +114,7 @@
 		margin: 35px 60px 0;
 		line-height: 1.2;
 		display: block;
-		font-family: 'ProductSans-Bold', 'FFMarkWebProMedium' !important;
+		font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -138,7 +138,7 @@
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
-			font-family: 'ProductSans-Bold', 'FFMarkWebProMedium' !important;
+			font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 
 			&:hover {
 				color: @secondary-color;
@@ -152,7 +152,7 @@
 		margin: 0 60px 25px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'FFMarkWebProMedium';
+		font-family: 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			margin: 10px 60px 40px;
 		}
@@ -167,7 +167,7 @@
 		margin: 40px 0 10px;
 		color: #276890;
 		line-height: 1.3;
-		font-family: 'ProductSans-Light';
+		font-family: 'ProductSans-Regular';
 		font-weight: 400!important;
 		font-size: 1.7em;
 		width: fit-content;
@@ -197,7 +197,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 8px;
-		font-family: 'FFMarkWebProMedium';
+		font-family: 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -217,7 +217,7 @@
 		font-size: 1em;
 		line-height: 1.8;
 		@media(max-width: 600px) {
-			font-size: 0.95em;
+			font-size: 0.96em;
 		}
 	}
 
@@ -282,7 +282,7 @@
 	}
 
 	p {
-		font-size: 0.95em;
+		font-size: 0.96em;
 		margin: 0 0 25px 0 !important;
 
 		@media (max-width: 800px) {
@@ -354,7 +354,7 @@
 			}
 
 			span {
-				font-family: 'FFMarkWebProMedium',sans-serif;
+				font-family: 'TTNorms-Medium',sans-serif;
 				font-weight: 500;
 			}
 
@@ -507,7 +507,6 @@
 			padding-left: 0;
 			line-height: 1.4;
 			margin-left: 20px;
-			padding-left: 20px;
 			display: block;
 			@media(max-width: 600px) {
 				margin-left: 0;
@@ -540,7 +539,7 @@
 		background: rgba(255, 222, 196, 0.42);
 		padding: 0 30px 20px;
 		margin-bottom: 20px;
-		font-size: 0.9em;
+		font-size: 0.96em;
 		line-height: 2;
 		overflow: hidden;
 		margin: 30px auto;
@@ -593,7 +592,7 @@
 		background: #e9f3f7;
 		color: #416e7d;
 		padding: 20px;
-		font-family: 'FFMarkWebProMedium',sans-serif;
+		font-family: 'TTNorms-Medium',sans-serif;
 		font-style: none;
 		font-size: 1em;
 		line-height: 1.6;
@@ -611,7 +610,7 @@
 		}
 
 		* {
-			font-family: 'FFMarkWebProMedium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			font-weight: 500;
 			line-height: 1.6;
 			font-size: 0.9em;
@@ -795,16 +794,15 @@
 			margin-top: 10px;
 			width: 100%;
 			clear: both;
-			font-size: 0.95em;
+			font-size: 0.96em;
 			color: #464a56;
-			font-size: 0.95em;
 			font-weight: 500;
 		}
 
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 10px;
-			font-family: 'FFMarkWebProMedium', '';
+			font-family: 'TTNorms-Medium', '';
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
