--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -35,7 +35,7 @@
 			transition: all 0.3s;
 			line-height: 1;
 			padding: 8px 10px;
-			font-family: 'FFMarkWebProBook';
+			font-family: 'TTNorms-Regular';
 			border-radius: 2px;
 			transition: all 0.3s ease-out;
 			@media(max-width:800px) {
@@ -45,8 +45,10 @@
 			&:hover {
 				cursor: pointer;
 				background: @hover-color;
-				color: white;
 				box-shadow: 2px 2px 3px 0 #239084;
+				* {
+					color: white;
+				}
 			}
 		}
 		@media(max-width: 800px) {
