--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -45,17 +45,17 @@ table {
 
     th {
       text-align: center;
-      font-family: 'FFMarkWebProBook';
+      font-family: 'TTNorms-Regular';
       min-width: 30px;
       padding: 10px;
       font-size: 0.9em;
 
       strong {
-        font-family: 'FFMarkWebProBook';
+        font-family: 'TTNorms-Regular';
       }
 
       &::before {
-        font-family: 'FFMarkWebProBook' !important;
+        font-family: 'TTNorms-Regular' !important;
       }
     }
   }
@@ -155,7 +155,7 @@ th {
       th {
         display: block;
         padding: 10px 5px!important;
-        font-family: 'FFMarkWebProBook';
+        font-family: 'TTNorms-Regular';
         letter-spacing: .5px;
         text-align: center;
         text-align: left;
@@ -237,7 +237,7 @@ th {
 
 .dataframe thead th {
   text-align: center !important;
-  font-family: 'FFMarkWebProBook' !important;
+  font-family: 'TTNorms-Regular' !important;
 }
 
 .dataframe tbody tr th:only-of-type {
