--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -34,7 +34,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: 'FFMarkWebProBook';
+        font-family: 'TTNorms-Regular';
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
@@ -45,7 +45,7 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: FFMarkWebProMedium;
+        font-family: TTNorms-Medium;
         text-shadow: 0 0 20px #2f2d56;
       }
     }
@@ -85,7 +85,7 @@
         min-height: 60px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: FFMarkWebProBook;
+        font-family: TTNorms-Regular;
         font-size: 1em;
         text-overflow: ellipsis;
       }
@@ -99,7 +99,7 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: FFMarkWebProBook,sans-serif;
+          font-family: TTNorms-Regular,sans-serif;
 
           a {
             line-height: 1;
