--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -36,7 +36,7 @@
 			width: 90%;
 			color: #527089;
 			font-size: 1em;
-			font-family: 'FFMarkWebProMedium',sans-serif!important;
+			font-family: 'TTNorms-Medium',sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -47,7 +47,7 @@
 
 			&::placeholder {
 				color: #828294;
-				font-family: 'FFMarkWebProBook',sans-serif!important;
+				font-family: 'TTNorms-Regular',sans-serif!important;
 			}
 
 			&:hover {
@@ -77,7 +77,7 @@
 
 	#nav-search {
 		font-size: 1em;
-		font-family: 'FFMarkWebProMedium',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -156,7 +156,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: 'FFMarkWebProMedium',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -249,7 +249,7 @@
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'FFMarkWebProBook',sans-serif;
+			font-family: 'TTNorms-Regular',sans-serif;
 			flex-grow: 1;
 			text-align: center;
 			transition: all 0.2s ease;
@@ -517,7 +517,7 @@
 			letter-spacing: 0;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'FFMarkWebProMedium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			display: flex;
 			align-items: center;
 
@@ -618,7 +618,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'FFMarkWebProMedium', sans-serif;
+		font-family: 'TTNorms-Medium', sans-serif;
 		display: inline-block;
 
 		&:hover {
@@ -645,7 +645,7 @@
 		letter-spacing: 1px;
 		margin-top: 0;
 		white-space: nowrap;
-		font-family: 'FFMarkWebProMedium',serif;
+		font-family: 'TTNorms-Medium',serif;
 		@media(max-width: 1040px) {
 			font-size: 1.3em !important;
 		}
@@ -656,7 +656,7 @@
 		font-size: 1em;
 		line-height: 1.8;
 		padding-right: 0;
-		font-family: 'FFMarkWebProMedium',sans-serif;
+		font-family: 'TTNorms-Medium',sans-serif;
 	}
 }
 
@@ -667,7 +667,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'FFMarkWebProMedium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			transition: all 0.2s ease;
 
 			&:hover {
@@ -681,7 +681,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: 'ProductSans-Medium',FFMarkWebProMedium,serif;
+		font-family: 'ProductSans-Medium',TTNorms-Medium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -692,7 +692,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: 'FFMarkWebProMedium',FFMarkWebProMedium,serif;
+		font-family: 'TTNorms-Medium',TTNorms-Medium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -755,11 +755,11 @@
 			margin-bottom: 17px;
 			line-height: 1.35;
 			padding: 0 0 10px;
-			font-family: 'FFMarkWebProMedium' ,sans-serif;
+			font-family: 'TTNorms-Medium' ,sans-serif;
 
 			.post-title,
 			.single-author-name {
-				font-family: 'FFMarkWebProMedium', sans-serif;
+				font-family: 'TTNorms-Medium', sans-serif;
 				.transition(all 0.2s ease);
 				@media(max-width: 600px) {
 					text-align: left;
@@ -840,7 +840,7 @@
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'FFMarkWebProMedium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 		}
 	}
 }
