--- a/src/less/pages/customtemplates.less
+++ b/src/less/pages/customtemplates.less
@@ -14,7 +14,7 @@
   .tag-name {
     font-size: 1.3em;
     margin-top: 0;
-    font-family: 'FFMarkWebProBook';
+    font-family: 'TTNorms-Regular';
 
     i {
       font-size: 0.8em;
