--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -84,7 +84,7 @@
       position: relative;
 
       span {
-        font-family: 'FFMarkWebProMedium','FFMarkWebProMedium', '' !important;
+        font-family: 'TTNorms-Medium','TTNorms-Medium', '' !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
@@ -108,7 +108,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'FFMarkWebProMedium','FFMarkWebProMedium';
+      font-family: 'TTNorms-Medium','TTNorms-Medium';
       color: #224a69;
     }
     @media (max-width: 600px) {
