--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -127,7 +127,7 @@
 
     .title-desktop {
       margin: 0 0 10px!important;
-      font-family: 'FFMarkWebProBook',serif;
+      font-family: 'TTNorms-Regular',serif;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
@@ -139,7 +139,7 @@
     .title-mobile {
       display: none;
       margin: 10px 0 20px!important;
-      font-family: 'FFMarkWebProBook',serif;
+      font-family: 'TTNorms-Regular',serif;
       font-size: 1.2em;
       line-height: 1.2;
       font-size: 1.2;
@@ -167,7 +167,7 @@
       text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 4;
-      font-family: 'FFMarkWebProBook' !important;
+      font-family: 'TTNorms-Regular' !important;
       overflow: hidden;
       text-align: left;
       -webkit-box-orient: vertical;
