--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -13,7 +13,7 @@
     padding-bottom: 10px;
     font-size: 1.3em;
     color: #518898 !important;
-    font-family: 'FFMarkWebProMedium',serif;
+    font-family: 'TTNorms-Medium',serif;
 
     @media(max-width: 600px) {
       margin-top: 5px;
@@ -36,7 +36,7 @@
       opacity: 0.6;
       counter-increment: step-counter -1;
       color: #518899;
-      font-family: 'FFMarkWebProBook';
+      font-family: 'TTNorms-Regular';
       @media(max-width: 600px) {
         font-size: 0.9em;
         line-height: 1.3;
@@ -46,7 +46,7 @@
 
       &::before {
         content: "Part " counter(step-counter, upper-roman) ". ";
-        font-family: 'FFMarkWebProMedium';
+        font-family: 'TTNorms-Medium';
         color: #518899;
 
         @media(max-width: 600px) {
@@ -64,11 +64,11 @@
   .currentPost {
     opacity: 1;
     margin-left: 0;
-    font-family: 'FFMarkWebProMedium';
+    font-family: 'TTNorms-Medium';
 
     &::before {
       margin-left: 0;
-      font-family: 'FFMarkWebProMedium';
+      font-family: 'TTNorms-Medium';
     }
   }
 }
