--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -97,10 +97,7 @@
                     </div>
                   </div>
                   <div class="split-fields">
-                    <div class="g-recaptcha" data-callback="captchaFilled" data-sitekey="6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21">
-                      <div style="width: 304px; height: 78px;">
-                        <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-                      </div>
+                        <div class="g-recaptcha" data-sitekey="6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></div>
                     </div>
                     <button class="www-Button www-Button--primary www-Button--fullWidth" data-js="writeForDOnationsSubmitButton" type="submit" disabled=""> Submit Application </button>
                   </div>
