--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -1,6 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
+<script src="{{asset "/dist/pages.js"}}"></script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <section class="content-wrap">
   <div class="container">
@@ -24,28 +25,28 @@
                 <li>The Blow-Our-Fucking-Minds Stuff</li>
               </ul>
               <form accept-charset="UTF-8" action="https://getform.io/f/ce75696d-0ee2-4475-8a8f-a26da6267917" method="POST">
-                <fieldset>
+                <fieldset class="active">
                   <h2>The Boring Stuff</h2>
                   <p>Tell us about yourself by letting Chrome auto-fill these obligatory fields.</p>
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_name">Full Name (required)</label>
-                      <input id="application_name" maxlength="255" name="application_submission[name]" type="text" required="">
+                      <input id="application_name" maxlength="20" name="application_submission[name]" type="text" required="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_email"> Email (required) </label>
-                      <input id="application_email" maxlength="255" name="application_submission[email]" type="email" required="">
+                      <input id="application_email" maxlength="30" name="application_submission[email]" type="email" required="">
                     </div>
                     <div class="input-field-group">
-                      <label for="application_username"> Desired Username/Call Sign/Gangsta Rap Persona </label>
-                      <input id="application_username" maxlength="255" name="application_submission[username]" type="text">
+                      <label for="application_username"> Desired Username/Call Sign/Gangsta Rap Persona</label>
+                      <input id="application_username" maxlength="30" name="application_submission[username]" type="text" required="">
                     </div>
                     <div class="input-field-group">
                       <label for="application__expertise"> What are your areas of expertise? </label>
-                      <input id="application__expertise" maxlength="255" name="application_submission[areas_of_expertise]" type="text">
+                      <input id="application__expertise" maxlength="100" name="application_submission[expertise]" type="text" required="">
                     </div>
                   </div>
-                  <button class="btn" type="submit">Next</button>
+                  <input type="button" name="next" class="next action-button" value="Next">
                 </fieldset>
 
                 <fieldset>
@@ -59,7 +60,7 @@
                     <label for="application_sample"> Writing sample (required) </label>
                     <textarea aria-describedby="application_sample" id="application_submission_sample" name="application_submission[sample]" required=""></textarea>
                   </div>
-                  <button class="btn" type="submit">Next</button>
+                  <input type="button" name="next" class="next action-button" value="Next">
                 </fieldset>
 
                 <fieldset>
@@ -73,27 +74,27 @@
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_website">Website</label>
-                      <input id="application_website" maxlength="255" name="application_submission[website]" type="text">
+                      <input id="application_website" maxlength="40" name="application_submission[website]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_blog">Blog</label>
-                      <input id="application_blog" maxlength="255" name="application_submission[blog]" type="text">
+                      <input id="application_blog" maxlength="40" name="application_submission[blog]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_github">Github</label>
-                      <input id="application_github" maxlength="255" name="application_submission[github]" type="text">
+                      <input id="application_github" maxlength="40" name="application_submission[github]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_twitter">Twitter</label>
-                      <input id="application_twitter" maxlength="255" name="application_submission[twitter]" type="text">
+                      <input id="application_twitter" maxlength="40" name="application_submission[twitter]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_myspace">MySpace</label>
-                      <input id="application_myspace" maxlength="255" name="application_submission[myspace]" type="text">
+                      <input id="application_myspace" maxlength="40" name="application_submission[myspace]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_ssn">Social Security Number</label>
-                      <input id="application_ssn" maxlength="255" name="application_submission[ssn]" type="text">
+                      <input id="application_ssn" maxlength="12" name="application_submission[ssn]" type="text">
                     </div>
                   </div>
                   <div class="split-fields">
@@ -101,7 +102,6 @@
                     </div>
                     <button class="www-Button www-Button--primary www-Button--fullWidth" data-js="writeForDOnationsSubmitButton" type="submit" disabled=""> Submit Application </button>
                   </div>
-                  <button class="btn" type="submit">Next</button>
                 </fieldset>
               </form>
             </div>
