fixed bug hiding links

--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -61,6 +61,7 @@
                     <textarea aria-describedby="application_sample" id="application_submission_sample" name="application_submission[sample]" required=""></textarea>
                   </div>
                   <input type="button" name="next" class="next action-button" value="Next">
+                  <input type="button" name="previous" class="previous action-button" value="Previous">
                 </fieldset>
 
                 <fieldset>
@@ -98,9 +99,10 @@
                     </div>
                   </div>
                   <div class="split-fields">
-                        <div class="g-recaptcha" data-sitekey="6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></div>
+                        <!--<div class="g-recaptcha" data-sitekey="6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></div>-->
                     </div>
-                    <button class="www-Button www-Button--primary www-Button--fullWidth" data-js="writeForDOnationsSubmitButton" type="submit" disabled=""> Submit Application </button>
+                    <input type="button" name="previous" class="previous action-button" value="Previous">
+                    <input type="submit" name="submit" class="submit action-button" value="Submit">
                   </div>
                 </fieldset>
               </form>
@@ -111,7 +113,7 @@
   </article>
   <!-- end main post area -->
 </section>
-<script src="https://www.google.com/recaptcha/api.js?render=6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></script>
+<!--<script src="https://www.google.com/recaptcha/api.js?render=6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></script>-->
 {{/post}}
 <!-- end post -->
 <!-- end site's main content area -->
