--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -1,7 +1,7 @@
 @import "../global/variables.less";
 @import "../global/mixin.less";
 
-.post-content > p > a {
+.tag-roundup .post-content > p > a {
   display: none;
   margin: 0;
 }
