--- a/src/less/pages/apply.less
+++ b/src/less/pages/apply.less
@@ -70,8 +70,6 @@
       height: 200px;
     }
 
-
-
     .next:active,
     .next:focus,
     .next:hover {
@@ -211,5 +209,6 @@ input[type="button"]  {
 
   &:hover {
     cursor: pointer;
+    background: @hover-color;
    }
 }
