code snippet refactoring

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -4,12 +4,12 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: #0f2b4d !important;
+	background: #111c28 !important;
 	background-size: cover;
 	padding: 35px 8%;
 	color: #fff;
 	margin-top: 30px;
-	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
+	/*box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);*/
 
 	.footer-title {
 		color: #fff;
@@ -107,8 +107,8 @@
 			font-family: 'TTNorms-Regular';
 			transition: all 0.2s ease-out;
 			font-size: 0.85em;
-			background: rgba(146, 209, 239, 0.1);
-			border: 1px solid rgba(255, 255, 255, 0.15);
+			background: rgba(205, 222, 230, 0.05);
+			border: 1px solid rgba(255, 255, 255, 0.1);
 
 			&:hover {
 				cursor: pointer;
@@ -169,8 +169,8 @@
 					width: 40px;
 					border-radius: 0;
 					margin: 0;
-					border-bottom: 1px solid #2a4488;
-					border-right: 1px solid #2a4488;
+					border-bottom: 1px solid #03050a;
+					border-right: 1px solid #03050a;
 				}
 			}
 
@@ -288,8 +288,8 @@
 		padding: 13px 20px;
 		border: 0;
 		outline: 0;
-		background: linear-gradient(165deg,#40a2a2,#1f68a7);
-		box-shadow: 2px 2px 2px 0 #061b2c;
+		background: #29314b;
+		box-shadow: 2px 2px 0 #020303;
 		color: #fff;
 		font-size: 16px;
 		text-transform: Uppercase;
