--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -12,3 +12,9 @@
 @import 'posts/galleries.less';
 @import 'posts/article-preview.less';
 @import 'posts/serieswidget.less';
+
+/* Code */
+@import 'posts/languages/shell.less';
+@import 'posts/languages/python.less';
+@import 'posts/languages/javascript.less';
+@import 'posts/languages/sql.less';
