--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -25,12 +25,6 @@
 			margin: 10px 25px 30px;
 		}
 
-		& > p {
-			@media(max-width: 600px) {
-				text-align: justify;
-			}
-		}
-
 		a {
 			color: @theme-color;
 			font-family: 'TTNorms-Medium';
@@ -101,11 +95,6 @@
 				}
 			}
 		}
-	}
-
-	& > p {
-		font-size: 1em;
-		margin: 0 0 30px !important;
 	}
 
 	.post-title {
@@ -282,18 +271,15 @@
 	}
 
 	p {
-		font-size: 0.96em;
 		margin: 0 0 25px 0 !important;
+		font-size: 1em;
 
 		@media (max-width: 800px) {
-			font-size: 0.9em;
-			text-align: justify;
 			margin: 0 0 20px;
 		}
 		@media (max-width: 600px) {
-			font-size: 0.9em;
-			text-align: justify;
-			line-height: 1.6 !important;
+			text-align: left;
+			line-height: 1.65 !important;
 			font-style: normal;
 		}
 	}
@@ -383,7 +369,7 @@
 					}
 				}
 				@media(max-width: 500px) {
-					font-size: 0.9em;
+
 					height: 24px;
 
 					span {
@@ -613,7 +599,7 @@
 			font-family: 'TTNorms-Medium',sans-serif;
 			font-weight: 500;
 			line-height: 1.6;
-			font-size: 0.9em;
+			font-size: 0.96em;
 			font-style: normal;
 		}
 
@@ -780,7 +766,7 @@
 				display: block;
 				line-height: 1em;
 				margin-bottom: 8px;
-				font-size: 0.9em;
+				font-size: 0.96em;
 
 				i {
 					margin-right: 8px;
