--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -22,7 +22,7 @@
 			text-rendering: auto;
 			-webkit-font-smoothing: antialiased;
 			right: 17px;
-			top: 14px;
+			top: 23px;
 			position: absolute;
 			color: #aeb4cc;
 			font-size: 1.2em;
@@ -564,15 +564,8 @@
 			color: @google-color;
 		}
 
-		.series-image {
-			margin-right: 20px;
-			border-radius: 2px;
-			@media(max-width: 1000px) {
-				display: none;
-			}
-		}
-
 		.series-info {
+			margin-left: 20px;
 			@media(max-width: 1000px) {
 				padding: 5px 0;
 				background: 0;
