--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -6,6 +6,14 @@
   margin: 0;
 }
 
+.tag-roundup > p {
+  margin: 0 0 0 0 !important;
+
+  &:last-of-type .link-preview {
+    border-bottom: none;
+  }
+}
+
 .link-preview {
   padding: 15px;
   transition: all 0.2s ease-out;
@@ -24,6 +32,8 @@
     width: 100%;
     padding: 0;
   }
+
+
 
   .detail-stack {
     position: relative;
