--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,11 +1,10 @@
 #seriesposts {
   margin-bottom: 20px;
-  padding: 20px 20px 1px;
+  padding: 15px 20px 1px;
   background: #dde7ef;
   border-radius: 3px;
   @media(max-width: 600px) {
-
-    padding: 15px 20px 10px;
+    padding: 15px 30px 10px;
   }
 
   h5 {
@@ -25,14 +24,14 @@
     list-style-type: upper-roman !important;
     margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: 20px;
+    margin-left: 0;
 
     @media(max-width: 600px) {
       margin: 20px 0 10px;
     }
 
     li {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       opacity: 0.6;
       counter-increment: step-counter -1;
       color: #518899;
@@ -41,12 +40,16 @@
         font-size: 0.9em;
         line-height: 1.3;
         margin-bottom: 15px;
-            display: flex;
+        display: flex;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
       }
 
       &::before {
         content: "Part " counter(step-counter, upper-roman) ". ";
-        font-family: 'TTNorms-Medium';
+        font-family: 'TTNorms-Bold';
         color: #518899;
 
         @media(max-width: 600px) {
